refactor: parseSlotForecast가 fcstTime 기준으로 한 번만 그룹핑하도록 변경 - O(S x N) -> O(N)